--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,16 +1,21 @@
+{% load staticfiles %}
 <html>
     <head>
         <title>BL0G</title>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+		<link rel="stylesheet" href="{% static 'css/blog.css' %}">
+		<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     </head>
     <body>
 	    <div>
-		    <n1><a href="/">Django Blog</a></n1>
+		    <h1><a href="/">Django Blog</a></h1>
 	    </div>
 
 	    {% for post in posts %}
 	    	<div>
 			<p>published: {{ post.published_date }}</p>
-			<n1><a hrer="">{{ post.title }}</a></n1>
+			<h1><a hrer="">{{ post.title }}</a></h1>
 			<p>{{ post.text | linebreaksbr }}</p>
 		</div>
 	    {% endfor %}
