--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,23 +1,13 @@
-{% load staticfiles %}
-<html>
-    <head>
-        <title>BL0G</title>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-		<link rel="stylesheet" href="{% static 'css/blog.css' %}">
-		<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
-    </head>
-    <body>
-	    <div>
-		    <h1><a href="/">Django Blog</a></h1>
-	    </div>
+{% extends 'blog/base.html' %}
 
-	    {% for post in posts %}
-	    	<div>
-			<p>published: {{ post.published_date }}</p>
-			<h1><a hrer="">{{ post.title }}</a></h1>
-			<p>{{ post.text | linebreaksbr }}</p>
-		</div>
-	    {% endfor %}
-    </body>
-</html>
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+            <div class="date">
+                {{ post.published_date }}
+            </div>
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaksbr }}</p>
+        </div>
+    {% endfor %}
+{% endblock %}
